# awesome-quant

./: .gitignore  .nojekyll  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.qmd  CONTRIBUTING.md  DESCRIPTION  README.html  README.md  README.qmd  TODO.md  _quarto.yml  about.html  about.qmd  cran.csv  cranscrape.py  index.html  index.qmd  legacy.txt  main.py  parse.py  projects.csv  projects.html  projects.md  projects.qmd  pyproject.toml  quants.md  recommendation.ipynb  robots.txt  search.json  sitemap.xml  staleness_report.md  topic.py
.github/: build.yml
.github/workflows/: build.yml  link-check.yml  pr-validate.yml  render-README.yaml
.ipynb_checkpoints/: README-checkpoint.md
docs/: CODE_OF_CONDUCT.html  about.html  codex-setup.md  github.html  index.html  projects.html  quants.html  search.json  styles.css
scripts/: migrate_readme.py  readme_entries.py  staleness_report.py  validate_readme.py
site/: .gitignore  _quarto.yml  about.qmd  generate.py  index.html  index.qmd  projects.csv  projects.qmd
site/docs/: index.html  projects.html
site/static/: main.js  style.css
site_libs/bootstrap/: bootstrap-0b37c64f34216b628666a8dac638b53b.min.css  bootstrap-12858c9ce0885248945210bbd3c85d1a.min.css  bootstrap-1713c1db1ad41a796903378fc9ac7b2b.min.css  bootstrap-19bbcc6d301408316d57746eade88bff.min.css  bootstrap-4df3b0c4fafa0f66eafcead0ee6cff11.min.css  bootstrap-5027bf1c1f92ac6615724d89c8213d6a.min.css  bootstrap-533b9ae3c010999c496e3372658dddf2.min.css  bootstrap-icons.css  bootstrap.min.css  (+13 more)
static/: main.js  style.css
(+70 files in other folders)
